Get rid of fixed height of pictures. Change tags to be more semantic. Add overflow-wrap property to avoid overlap.

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-	margin: 0px;
+	margin: 0;
 	margin-left: 1vw;
 	margin-right: 1vw;
 
@@ -47,14 +47,14 @@ img {
 	letter-spacing: 3px;
 }
 
-#panel {
+main {
 	width: 96%;
 	padding: 2vw;
 }
 
-#panel img#middle_background{
+main img#middle_background{
 	width: 100%;
-	height: 400px;
+
 }
 
 #works {
@@ -85,11 +85,11 @@ img {
 .work_image{
 	width: 100%;
 	max-width: 500px;
-	height: 200px;
 }
 
 .work_url{
 	font-size: 10px;
+	overflow-wrap: break-word;
 }
 
 
